--- a/src/components/pages/Projects.module.css
+++ b/src/components/pages/Projects.module.css
@@ -94,7 +94,7 @@
     font-size: 1em;
     text-decoration: none;
     transition: background-color 0.3s ease;
-    margin-bottom: 0.5rem;
+    margin-bottom: 2rem;
   }
   
   .repoLink:hover {
